# libtorch_Yolov5

./: .gitignore  CMakeLists.txt  README.md  example-app.cpp  main  main.cpp  test.cpp  trace.py  tracing.py
include/: detector.h
lib/: nms.hpp
src/: detector.cpp  test.cpp
